--- a/dkl4c.toml
+++ b/dkl4c.toml
@@ -1,6 +1,6 @@
 [about]
 name = "DKL4C"
-avatar = "dsf.jpg"
+avatar = "dkl4c.jpg"
 hobbies = ["🐧 Linux", "🦀 Rust", "🎮️ Game", "Galgame"]
 skills = ["Linux", "Rust", "配环境（"]
 
